--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description" : "Piez is a developer tool to show byte savings on pages that use Akamai Image Manager",
   "icons": { "16": "icons/16x16.png", "19": "icons/19x19.png", "38": "icons/38x38.png", "48": "icons/48x48.png", "128": "icons/128x128.png" },
-  "permissions": ["tabs", "cookies", "webRequest", "webRequestBlocking", "<all_urls>"],
+  "permissions": ["tabs", "cookies", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>" ],
   "devtools_page": "devtools/devtools.html",
 
   "browser_action": {
