--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description" : "Piez is a developer tool to show optimizations made by Akamai Image Manager and Cloud Performance Intelligence.",
   "icons": { "16": "icons/16x16.png", "19": "icons/19x19.png", "38": "icons/38x38.png", "48": "icons/48x48.png", "128": "icons/128x128.png" },
-  "permissions": ["tabs", "cookies", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>" ],
+  "permissions": ["storage", "tabs", "cookies", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"],
   "devtools_page": "devtools/devtools.html",
 
   "browser_action": {
@@ -31,5 +31,5 @@
     "persistent": true
   },
 
-  "incognito" : "not_allowed"
+  "incognito" : "split"
 }
