--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
 	"content_security_policy": "script-src 'self' https://www.google-analytics.com/analytics.js; object-src 'self'",
 
 	"background": {
-		"scripts": ["pieztoggle.js", "background.js"],
+		"scripts": ["background.js"],
 		"persistent": true
 	},
 
