--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Piez",
-	"version": "1.6.4",
+	"version": "1.6.5",
 	"manifest_version": 2,
-	"description" : "Piez is a developer tool to show optimizations made by Akamai Image Manager and Adaptive Acceleration.",
+	"description" : "Piez displays optimizations made by Akamai Image Manager, Resource Optimizer, Push/Preconnect, and Script Manager.",
 	"icons": { "16": "icons/16x16.png", "19": "icons/19x19.png", "38": "icons/38x38.png", "48": "icons/48x48.png", "128": "icons/128x128.png" },
 	"permissions": ["storage", "tabs", "cookies", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"],
 	"devtools_page": "devtools/devtools.html",
